# Vela.jl

./: CHANGELOG.md  pyproject.toml
.github/workflows/: pyvela-CI.yml
docs/src/: pyvela-cli.md
pyvela/pyvela/: model.py  pyvela_script.py  spnta.py
pyvela/tests/: test_data_files.py  test_run_analysis.py
src/: Vela.jl
src/model/binary/: binary_outer.jl
test/: test_dd.jl
