[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvela"
version = "0.1.5"
description = "Python interface for Vela.jl, a Bayesian pulsar timing and noise analysis package."
keywords = ["astronomy", "astrophysics", "pulsar"]

authors = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"},
    {name = "David Kaplan"}
]
maintainers = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1",
    "scipy>1.15",
    "astropy>=6.1",
    "pint-pulsar>=1.1.3",
    "juliacall>=0.9",
    "emcee",
    "PTMCMCSampler",
    "numdifftools",
    "h5py",
    "corner",
    "matplotlib"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU General Public License Version 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/abhisrkckl/Vela.jl"
Documentation = "https://abhisrkckl.github.io/Vela.jl/"

[project.scripts]
pyvela = "pyvela.pyvela_script:main"
pyvela-compare = "pyvela.pyvela_compare_script:main"
pyvela-plot = "pyvela.pyvela_plot_script:main"
pyvela-jlso = "pyvela.pyvela_jlso_script:main"
pyvela-rethin = "pyvela.pyvela_rethin_script:main"
pyvela-plotchains = "pyvela.pyvela_plotchains_script:main"

[tool.setuptools]
zip-safe = false
package-dir = {"" = "pyvela"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["pyvela"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.distutils.bdist_wheel]
universal = 0

[tool.aliases]
test = "pytest"
